# tp-algo2-2021-individual

./: README.md
g1/parcial/: README.txt
g1/taller/: CMakeLists.txt  main.cpp
g1/taller/src/: agenda.cpp  agenda.h  clases.cpp  clases.h  fecha.cpp  fecha.h  horario.cpp  horario.h  recordatorio.cpp  recordatorio.h
g1/taller/tests/: tests.cpp
g2/parcial/: README.txt
g2/taller/: README.txt
g2/taller/correcciones/2021-05-10/: Lista.h
g2/taller/src/: Lista.hpp
g2/taller/tests/: README.txt
g3/parcial/: README.txt
g3/taller/: README.txt
g3/taller/src/: Conjunto.h  Conjunto.hpp  README.txt
g4/parcial/: README.txt
g4/taller/: README.txt
g4/taller/correcciones/2021-07-03/: string_map.h  string_map.hpp
g4/taller/src/: string_map.hpp
